--- a/intell_voice_service.gni
+++ b/intell_voice_service.gni
@@ -15,6 +15,7 @@ declare_args() {
   telephony_service_enable = false
   intelligent_voice_framework_trigger_enable = true
   intelligent_voice_framework_engine_enable = true
+  intelligent_voice_framework_only_first_stage = false
   if (defined(global_parts_info) &&
       defined(global_parts_info.telephony_state_registry) &&
       defined(global_parts_info.telephony_core_service) &&
