--- a/tests/unittest/intell_voice_test/BUILD.gn
+++ b/tests/unittest/intell_voice_test/BUILD.gn
@@ -78,19 +78,26 @@ ohos_unittest("trigger_unit_test") {
     "-DENABLE_DEBUG",
   ]
 
-  deps = [ "../../../services/intell_voice_trigger:intelligentvoice_trigger" ]
+  deps =
+      [ "../../../services/intell_voice_trigger:intelligentvoice_trigger_test" ]
 
   external_deps = [
     "audio_framework:audio_client",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
-    "core_service:tel_core_service_api",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "hilog:libhilog",
     "power_manager:powermgr_client",
     "relational_store:native_rdb",
-    "state_registry:tel_state_registry_api",
   ]
+
+  if (telephony_service_enable) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+    defines = [ "SUPPORT_TELEPHONY_SERVICE" ]
+  }
 }
 
 ohos_unittest("trigger_manager_test") {
@@ -112,21 +119,28 @@ ohos_unittest("trigger_manager_test") {
     "-DENABLE_DEBUG",
   ]
 
-  deps = [ "../../../services/intell_voice_trigger:intelligentvoice_trigger" ]
+  deps =
+      [ "../../../services/intell_voice_trigger:intelligentvoice_trigger_test" ]
 
   external_deps = [
     "audio_framework:audio_client",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
-    "core_service:tel_core_service_api",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "hilog:libhilog",
     "power_manager:powermgr_client",
     "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
-    "state_registry:tel_state_registry_api",
   ]
+
+  if (telephony_service_enable) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+    defines = [ "SUPPORT_TELEPHONY_SERVICE" ]
+  }
 }
 
 ohos_unittest("update_engine_test") {
@@ -182,8 +196,8 @@ ohos_unittest("update_engine_test") {
   deps = [
     "../../../frameworks/native:intellvoice_native",
     "../../../services:intell_voice_proxy",
-    "../../../services/intell_voice_engine:intelligentvoice_engine",
-    "../../../services/intell_voice_service:intell_voice_server",
+    "../../../services/intell_voice_engine:intelligentvoice_engine_test",
+    "../../../services/intell_voice_service:intell_voice_server_test",
     "../../../utils:intell_voice_utils",
   ]
 
