--- a/services/intell_voice_engine/test/unittest/BUILD.gn
+++ b/services/intell_voice_engine/test/unittest/BUILD.gn
@@ -13,6 +13,7 @@
 
 import("//build/ohos.gni")
 import("//build/test.gni")
+import("//foundation/ai/intelligent_voice_framework/intell_voice_service.gni")
 
 module_output_path = "ai_intelligent_voice_framework/intell_voice"
 
@@ -74,9 +75,7 @@ ohos_unittest("intell_voice_manager_test") {
     "audio_framework:audio_capturer",
     "audio_framework:audio_client",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
-    "core_service:tel_core_service_api",
     "data_share:datashare_consumer",
     "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
@@ -97,8 +96,17 @@ ohos_unittest("intell_voice_manager_test") {
     "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
-    "state_registry:tel_state_registry_api",
   ]
+
+  if (telephony_service_enable) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+    defines = [ "SUPPORT_TELEPHONY_SERVICE" ]
+  }
+
   sources = [
     "src/headset_test/adapter_host_manager_test.cpp",
     "src/headset_test/headset_manager_test.cpp",
