--- a/services/intell_voice_trigger/test/unittest/BUILD.gn
+++ b/services/intell_voice_trigger/test/unittest/BUILD.gn
@@ -13,6 +13,7 @@
 
 import("//build/ohos.gni")
 import("//build/test.gni")
+import("//foundation/ai/intelligent_voice_framework/intell_voice_service.gni")
 
 module_output_path = "ai_intelligent_voice_framework/intell_voice"
 
@@ -48,14 +49,20 @@ ohos_unittest("intelligent_voice_trigger_unit_test") {
   external_deps = [
     "audio_framework:audio_client",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
-    "core_service:tel_core_service_api",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "hilog:libhilog",
     "power_manager:powermgr_client",
     "relational_store:native_rdb",
-    "state_registry:tel_state_registry_api",
   ]
+
+  if (telephony_service_enable) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+    defines = [ "SUPPORT_TELEPHONY_SERVICE" ]
+  }
 
   sources = [ "src/trigger_detector_unit_test.cpp" ]
 }
@@ -100,9 +107,7 @@ ohos_unittest("trigger_manager_test") {
     "audio_framework:audio_capturer",
     "audio_framework:audio_client",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
-    "core_service:tel_core_service_api",
     "data_share:datashare_consumer",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.0",
@@ -119,8 +124,16 @@ ohos_unittest("trigger_manager_test") {
     "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
-    "state_registry:tel_state_registry_api",
   ]
+
+  if (telephony_service_enable) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+    defines = [ "SUPPORT_TELEPHONY_SERVICE" ]
+  }
 
   sources = [
     "src/trigger_manager_test.cpp",
