--- a/tests/fuzztest/servicemanager_fuzzer/BUILD.gn
+++ b/tests/fuzztest/servicemanager_fuzzer/BUILD.gn
@@ -54,8 +54,8 @@ ohos_fuzztest("ServiceManagerFuzzTest") {
 
   deps = [
     "../../../frameworks/native:intellvoice_native",
-    "../../../services/intell_voice_engine:intelligentvoice_engine",
-    "../../../services/intell_voice_service:intell_voice_server",
+    "../../../services/intell_voice_engine:intelligentvoice_engine_test",
+    "../../../services/intell_voice_service:intell_voice_server_test",
     "../../../utils:intell_voice_utils",
   ]
 
@@ -79,9 +79,7 @@ ohos_fuzztest("ServiceManagerFuzzTest") {
     "audio_framework:audio_capturer",
     "audio_framework:audio_client",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
-    "core_service:tel_core_service_api",
     "data_share:datashare_consumer",
     "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
@@ -101,6 +99,14 @@ ohos_fuzztest("ServiceManagerFuzzTest") {
     "relational_store:native_rdb",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
-    "state_registry:tel_state_registry_api",
   ]
+
+  if (telephony_service_enable) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+    defines = [ "SUPPORT_TELEPHONY_SERVICE" ]
+  }
 }
