--- a/services/intell_voice_service/BUILD.gn
+++ b/services/intell_voice_service/BUILD.gn
@@ -58,6 +58,7 @@ ohos_source_set("server_source") {
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "data_share:datashare_consumer",
+    "eventhandler:libeventhandler",
     "ffrt:libffrt",
     "image_framework:image_native",
     "ipc:ipc_core",
@@ -86,7 +87,6 @@ ohos_source_set("server_source") {
   if (intelligent_voice_framework_only_first_stage) {
     cflags_cc += [ "-DONLY_FIRST_STAGE" ]
   }
-
   subsystem_name = "ai"
   part_name = "intelligent_voice_framework"
 }
