--- a/utils/BUILD.gn
+++ b/utils/BUILD.gn
@@ -50,6 +50,7 @@ ohos_shared_library("intell_voice_utils") {
   }
 
   external_deps = [
+    "ability_runtime:ability_manager",
     "access_token:libaccesstoken_sdk",
     "access_token:libprivacy_sdk",
     "access_token:libtokenid_sdk",
