--- a/frameworks/js/BUILD.gn
+++ b/frameworks/js/BUILD.gn
@@ -66,7 +66,9 @@ ohos_shared_library("intelligentvoice") {
     "access_token:libaccesstoken_sdk",
     "access_token:libtokenid_sdk",
     "c_utils:utils",
-    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers_1.0",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers_1.1",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers_1.2",
     "hilog:libhilog",
     "ipc:ipc_core",
     "napi:ace_napi",
