--- a/services/intell_voice_trigger/test/unittest/BUILD.gn
+++ b/services/intell_voice_trigger/test/unittest/BUILD.gn
@@ -49,7 +49,9 @@ ohos_unittest("intelligent_voice_trigger_unit_test") {
   external_deps = [
     "audio_framework:audio_client",
     "c_utils:utils",
-    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers_1.0",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers_1.1",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers_1.2",
     "hilog:libhilog",
     "power_manager:powermgr_client",
     "relational_store:native_rdb",
@@ -109,7 +111,6 @@ ohos_unittest("trigger_manager_test") {
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "data_share:datashare_consumer",
-    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.0",
     "drivers_interface_intelligent_voice:libintell_voice_trigger_proxy_1.1",
     "eventhandler:libeventhandler",
