--- a/tests/fuzztest/intellvoicemanager_fuzzer/BUILD.gn
+++ b/tests/fuzztest/intellvoicemanager_fuzzer/BUILD.gn
@@ -48,7 +48,9 @@ ohos_fuzztest("IntellVoiceManagerFuzzTest") {
 
   external_deps = [
     "c_utils:utils",
-    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers_1.0",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers_1.1",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers_1.2",
     "hilog:libhilog",
     "ipc:ipc_core",
   ]
