--- a/tests/unittest/intell_voice_test/BUILD.gn
+++ b/tests/unittest/intell_voice_test/BUILD.gn
@@ -49,7 +49,9 @@ ohos_unittest("client_unit_test") {
 
   external_deps = [
     "c_utils:utils",
-    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers_1.0",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers_1.1",
+    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers_1.2",
     "hilog:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
@@ -84,7 +86,9 @@ ohos_unittest("trigger_unit_test") {
   external_deps = [
     "audio_framework:audio_client",
     "c_utils:utils",
-    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers_1.0",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers_1.1",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers_1.2",
     "hilog:libhilog",
     "power_manager:powermgr_client",
     "relational_store:native_rdb",
@@ -125,7 +129,9 @@ ohos_unittest("trigger_manager_test") {
   external_deps = [
     "audio_framework:audio_client",
     "c_utils:utils",
-    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers_1.0",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers_1.1",
+    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers_1.2",
     "hilog:libhilog",
     "power_manager:powermgr_client",
     "relational_store:native_rdb",
@@ -213,8 +219,6 @@ ohos_unittest("update_engine_test") {
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "data_share:datashare_consumer",
-    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
-    "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
     "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.1",
     "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.2",
