fix: part_conpile 编译
Signed-off-by: xietingwei <xietingwei@h-partners.com>

--- a/services/intell_voice_engine/BUILD.gn
+++ b/services/intell_voice_engine/BUILD.gn
@@ -90,8 +90,10 @@ ohos_source_set("engine_source") {
       "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
       "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.1",
       "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.2",
+      "eventhandler:libeventhandler",
       "ffrt:libffrt",
       "hdf_core:libhdi",
+      "hilog:libhilog",
       "huks:libhukssdk",
       "image_framework:image_native",
       "ipc:ipc_core",
