--- a/services/intell_voice_service/BUILD.gn
+++ b/services/intell_voice_service/BUILD.gn
@@ -60,6 +60,7 @@ ohos_source_set("server_source") {
     "data_share:datashare_consumer",
     "eventhandler:libeventhandler",
     "ffrt:libffrt",
+    "hilog:libhilog",
     "image_framework:image_native",
     "ipc:ipc_core",
     "kv_store:distributeddata_inner",
