--- a/services/intell_voice_trigger/BUILD.gn
+++ b/services/intell_voice_trigger/BUILD.gn
@@ -53,6 +53,7 @@ ohos_source_set("trigger_source") {
       "eventhandler:libeventhandler",
       "ffrt:libffrt",
       "hdf_core:libhdi",
+      "hilog:libhilog",
       "huks:libhukssdk",
       "ipc:ipc_core",
       "kv_store:distributeddata_inner",
