--- a/services/intell_voice_trigger/BUILD.gn
+++ b/services/intell_voice_trigger/BUILD.gn
@@ -57,7 +57,6 @@ ohos_source_set("trigger_source") {
       "huks:libhukssdk",
       "ipc:ipc_core",
       "kv_store:distributeddata_inner",
-      "power_manager:powermgr_client",
       "relational_store:native_rdb",
       "safwk:system_ability_fwk",
       "samgr:samgr_proxy",
@@ -95,6 +94,11 @@ ohos_source_set("trigger_source") {
   }
 
   branch_protector_ret = "pac_ret"
+
+  if (intelligent_voice_framework_power_manager_enable) {
+    external_deps += [ "power_manager:powermgr_client" ]
+    defines += [ "POWER_MANAGER_ENABLE" ]
+  }
 
   if (telephony_service_enable) {
     external_deps += [
