--- a/intell_voice_service.gni
+++ b/intell_voice_service.gni
@@ -19,6 +19,7 @@ declare_args() {
   intelligent_voice_framework_only_second_stage = false
   intelligent_voice_framework_window_manager_enable = false
   intelligent_voice_framework_power_manager_enable = false
+  intelligent_voice_framework_first_stage_oneshot_enable = false
   if (defined(global_parts_info) &&
       defined(global_parts_info.telephony_state_registry) &&
       defined(global_parts_info.telephony_core_service) &&
