--- a/services/intell_voice_service/BUILD.gn
+++ b/services/intell_voice_service/BUILD.gn
@@ -65,7 +65,7 @@ ohos_source_set("server_source") {
     "ipc:ipc_core",
     "kv_store:distributeddata_inner",
     "safwk:system_ability_fwk",
-    "samgr:samgr_proxy",
+    "samgr:samgr_proxy"
   ]
 
   sanitize = {
@@ -91,6 +91,9 @@ ohos_source_set("server_source") {
 
   if (intelligent_voice_framework_only_first_stage) {
     cflags_cc += [ "-DONLY_FIRST_STAGE" ]
+    if (intelligent_voice_framework_first_stage_oneshot_enable) {
+      cflags_cc += [ "-DFIRST_STAGE_ONESHOT_ENABLE" ]
+    }
   }
 
   subsystem_name = "ai"
