--- a/tests/unittest/intell_voice_test/BUILD.gn
+++ b/tests/unittest/intell_voice_test/BUILD.gn
@@ -83,13 +83,20 @@ ohos_unittest("trigger_unit_test") {
   external_deps = [
     "audio_framework:audio_client",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
-    "core_service:tel_core_service_api",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "hilog:libhilog",
     "power_manager:powermgr_client",
     "relational_store:native_rdb",
   ]
+
+  if (telephony_service_enable) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+    defines = [ "SUPPORT_TELEPHONY_SERVICE" ]
+  }
 }
 
 ohos_unittest("trigger_manager_test") {
@@ -116,8 +123,6 @@ ohos_unittest("trigger_manager_test") {
   external_deps = [
     "audio_framework:audio_client",
     "c_utils:utils",
-    "call_manager:tel_call_manager_api",
-    "core_service:tel_core_service_api",
     "drivers_interface_intelligent_voice:intell_voice_trigger_idl_headers",
     "hilog:libhilog",
     "power_manager:powermgr_client",
@@ -125,6 +130,15 @@ ohos_unittest("trigger_manager_test") {
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
   ]
+
+  if (telephony_service_enable) {
+    external_deps += [
+      "call_manager:tel_call_manager_api",
+      "core_service:tel_core_service_api",
+      "state_registry:tel_state_registry_api",
+    ]
+    defines = [ "SUPPORT_TELEPHONY_SERVICE" ]
+  }
 }
 
 ohos_unittest("update_engine_test") {
